--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha1",
+    "chart.js": "^4.2.0",
     "jquery": "^3.6.3",
+    "ng2-charts": "^4.1.1",
+    "ngx-toastr": "^16.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
